--- a/src/css/page.css
+++ b/src/css/page.css
@@ -60,7 +60,7 @@
   margin: 24px 0 0 0;
   border-radius: 10px;
   background-color: white;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .content-card .padded-content {
@@ -88,6 +88,7 @@
 .content-card.img-banner {
   flex: 0 0 auto;
   height: 200px;
+  overflow: hidden;
 }
 
 .img-banner {
