--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -39,21 +39,23 @@
   text-align: center;
 }
 
-.ant-picker-content > thead > tr > th:nth-of-type(1)::after, .ant-picker-content > thead > tr > th:nth-of-type(2)::after{
-  content: "nday";
-}
-.ant-picker-content > thead > tr > th:nth-of-type(3)::after{
-  content: "esday";
-}
-.ant-picker-content > thead > tr > th:nth-of-type(4)::after{
-  content: "dnesday";
-}
-.ant-picker-content > thead > tr > th:nth-of-type(5)::after{
-  content: "ursday";
-}
-.ant-picker-content > thead > tr > th:nth-of-type(6)::after{
-  content: "iday";
-}
-.ant-picker-content > thead > tr > th:nth-of-type(7)::after{
-  content: "turday";
+@media (orientation: landscape) {
+  .ant-picker-content > thead > tr > th:nth-of-type(1)::after, .ant-picker-content > thead > tr > th:nth-of-type(2)::after{
+    content: "nday";
+  }
+  .ant-picker-content > thead > tr > th:nth-of-type(3)::after{
+    content: "esday";
+  }
+  .ant-picker-content > thead > tr > th:nth-of-type(4)::after{
+    content: "dnesday";
+  }
+  .ant-picker-content > thead > tr > th:nth-of-type(5)::after{
+    content: "ursday";
+  }
+  .ant-picker-content > thead > tr > th:nth-of-type(6)::after{
+    content: "iday";
+  }
+  .ant-picker-content > thead > tr > th:nth-of-type(7)::after{
+    content: "turday";
+  }
 }
