--- a/src/css/page.css
+++ b/src/css/page.css
@@ -22,8 +22,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  height: 98px;
-  padding: 16px 24px;
+  /* height: 98px; */
+  padding: 24px;
   background-color: white;
 }
 
