--- a/src/components/folders/Folder.css
+++ b/src/components/folders/Folder.css
@@ -29,6 +29,10 @@
   border-right: 1px solid #E5E5E5;
 }
 
+.folder-search.ant-input-group-wrapper {
+  width: 50%;
+}
+
 /* ============================================================================================== */
 /* FOLDER LIST AND FOLDER STYLES */
 /* ============================================================================================== */
