--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -38,6 +38,7 @@
   display: inline-block;
   font-size: 14px;
   font-weight: 400;
+  color: #474747;
 }
 
 .contact-item p,
@@ -46,7 +47,7 @@
 }
 
 .contact-item h1 {
-  margin-left: 8px;
+  margin-left: 16px;
 }
 
 /* .contact-item-info {
