--- a/src/components/folders/folder.css
+++ b/src/components/folders/folder.css
@@ -36,6 +36,20 @@
   width: 50%;
 }
 
+.search-return-to-folders {
+  color: #414141;
+}
+
+.search-return-to-folders:hover {
+  text-decoration: underline;
+}
+
+.search-return-to-folders-link {
+  margin-left: 12px;
+  margin-right: 6px;
+  font-size: 16px;
+}
+
 /* ============================================================================================== */
 /* FOLDER LIST AND FOLDER STYLES */
 /* ============================================================================================== */
@@ -138,9 +152,26 @@
 /* ============================================================================================== */
 /* SEARCH STYLES */
 /* ============================================================================================== */
+.search-results-list .ant-pagination {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.search-results-list .search-result-container::after {
+  content: "";
+  display: block;
+  position: relative;
+  top: 24px;
+  border-bottom: 1px solid #f0f0f0;
+}
+
+.search-results-list .search-result-container:last-child::after {
+  display: none;
+}
+
 .search-result-container {
   padding: 24px 0;
-  border-bottom: 1px solid #f0f0f0;
+  /* border-bottom: 1px solid #f0f0f0; */
 }
 
 .search-result-header-row {
@@ -164,7 +195,12 @@
   border: 1px solid #dadce1;
   border-radius: 8px;
   max-height: 300px;
+  overflow: scroll;
+}
+
+.search-result-content-container,
+.search-results-list .search-result-container::after {
   width: 50%;
   min-width: 400px;
-  overflow: scroll;
+  max-width: 690px;
 }
